# VSCodeProjectTemplate

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  new_project.ps1  new_project.sh
.github/workflows/: bump-version.yml
cmake/: version.h.in
example/: CMakeLists.txt  main.cpp
source/: dummy.cpp
